# voceversa

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/instructions/: superthink.md
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: asmjit_evaluation.md  fft_libraries_report.md  resampler_competitive_report.md  singing_synthesis_dependency_report.md  vv_dsp_requirements_and_design.md
include/core/: ComputationGraph.h  DataPacket.h  DummyGainFilter.h  IPlatformIO.h  IPostFilter.h  ISynthesisNode.h
include/utils/: AudioBuffer.h  FFTWrapper.h  SignalUtils.h  WavIO.h
include/world/: AnalysisUtils.h  UtauWorldInterface.h  WorldAnalysisNode.h  WorldSynthesisNode.h
scripts/: build.bat  build.sh
src/: main.cpp
src/platform/: LinuxPlatformIO.cpp
src/tools/: vv_world.cpp
src/utils/: WavIO.cpp
src/world/: D4C.cpp  F0Extraction.cpp  SpectralAnalysis.cpp  UtauWorldInterface.cpp  WorldAnalysisNode.cpp  WorldSynthesisNode.cpp
tests/: test_core.cpp  test_world.cpp
voicebank/: oto.ini
